[gd_scene load_steps=3 format=2]

[ext_resource path="res://ShortCutGen.gd" type="Script" id=1]

[sub_resource type="ImageTexture" id=1]

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VB1" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="VB1"]
margin_top = 77.0
margin_right = 680.0
margin_bottom = 91.0
text = "SHORTCUT MAKER"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VB1"]
margin_top = 123.0
margin_right = 680.0
margin_bottom = 351.0

[node name="VB2" type="VBoxContainer" parent="VB1/HBoxContainer"]
margin_right = 548.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VB1/HBoxContainer/VB2"]
margin_right = 548.0
margin_bottom = 228.0
custom_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VB1/HBoxContainer/VB2/VBoxContainer"]
margin_right = 548.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 118.0
margin_bottom = 19.0
text = "Application Name:"

[node name="app_name" type="LineEdit" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 548.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
context_menu_enabled = false
shortcut_keys_enabled = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VB1/HBoxContainer/VB2/VBoxContainer"]
margin_top = 54.0
margin_right = 548.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 136.0
margin_bottom = 17.0
text = "Executable Directory:"

[node name="exe_dir" type="Label" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer2"]
margin_left = 140.0
margin_top = 3.0
margin_right = 496.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="exe_button" type="Button" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer2"]
margin_left = 500.0
margin_right = 548.0
margin_bottom = 20.0
text = "OPEN"

[node name="HBoxContainer4" type="HBoxContainer" parent="VB1/HBoxContainer/VB2/VBoxContainer"]
margin_top = 104.0
margin_right = 548.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer4"]
margin_top = 3.0
margin_right = 61.0
margin_bottom = 17.0
text = "App Icon:"

[node name="ico_dir" type="Label" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer4"]
margin_left = 65.0
margin_top = 3.0
margin_right = 496.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="icon_button" type="Button" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer4"]
margin_left = 500.0
margin_right = 548.0
margin_bottom = 20.0
text = "OPEN"

[node name="HBoxContainer5" type="HBoxContainer" parent="VB1/HBoxContainer/VB2/VBoxContainer"]
margin_top = 154.0
margin_right = 548.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer5"]
margin_top = 3.0
margin_right = 92.0
margin_bottom = 17.0
text = "Save Directory"

[node name="save_dir" type="Label" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer5"]
margin_left = 96.0
margin_top = 3.0
margin_right = 489.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="save_button" type="Button" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer5"]
margin_left = 493.0
margin_right = 548.0
margin_bottom = 20.0
text = "SELECT"

[node name="HBoxContainer3" type="HBoxContainer" parent="VB1/HBoxContainer/VB2/VBoxContainer"]
margin_top = 204.0
margin_right = 548.0
margin_bottom = 228.0

[node name="Label" type="Label" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 67.0
margin_bottom = 19.0
text = "Comment:"

[node name="comment" type="LineEdit" parent="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer3"]
margin_left = 71.0
margin_right = 548.0
margin_bottom = 24.0
rect_min_size = Vector2( 64, 20 )
size_flags_horizontal = 3
context_menu_enabled = false
shortcut_keys_enabled = false

[node name="exe_select_diag" type="FileDialog" parent="VB1/HBoxContainer/VB2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
window_title = "Open a File"
mode = 0
access = 2
show_hidden_files = true
current_dir = "/home"
current_file = "home"
current_path = "/home/home"

[node name="icon_select_diag" type="FileDialog" parent="VB1/HBoxContainer/VB2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.ico", "*.png", "*.jpg" )
show_hidden_files = true
current_dir = "/home"
current_file = "home"
current_path = "/home/home"

[node name="save_select_diag2" type="FileDialog" parent="VB1/HBoxContainer/VB2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
window_title = "Open a Directory"
mode = 2
access = 2
show_hidden_files = true
current_dir = "/home"
current_path = "/home/"

[node name="icon_preview" type="TextureRect" parent="VB1/HBoxContainer"]
margin_left = 552.0
margin_right = 680.0
margin_bottom = 228.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 5
size_flags_vertical = 5
size_flags_stretch_ratio = 0.5
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="HBoxContainer3" type="HBoxContainer" parent="VB1"]
margin_top = 383.0
margin_right = 680.0
margin_bottom = 403.0
alignment = 1

[node name="sav_def_btn" type="Button" parent="VB1/HBoxContainer3"]
margin_left = 196.0
margin_right = 369.0
margin_bottom = 20.0
text = "Set Default Save Location"

[node name="create_btn" type="Button" parent="VB1/HBoxContainer3"]
margin_left = 373.0
margin_right = 483.0
margin_bottom = 20.0
text = "Create Shortcut"

[node name="warning_diag" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.5
margin_top = 62.0
margin_right = 92.5
margin_bottom = 120.0
dialog_text = "Error: Directory and/or Program name not set"

[connection signal="pressed" from="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer2/exe_button" to="." method="_on_exe_button_pressed"]
[connection signal="pressed" from="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer4/icon_button" to="." method="_on_icon_button_pressed"]
[connection signal="pressed" from="VB1/HBoxContainer/VB2/VBoxContainer/HBoxContainer5/save_button" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="VB1/HBoxContainer/VB2/exe_select_diag" to="." method="_on_exe_select_diag_file_selected"]
[connection signal="file_selected" from="VB1/HBoxContainer/VB2/icon_select_diag" to="." method="_on_icon_select_diag_file_selected"]
[connection signal="dir_selected" from="VB1/HBoxContainer/VB2/save_select_diag2" to="." method="_on_save_select_diag2_dir_selected"]
[connection signal="pressed" from="VB1/HBoxContainer3/sav_def_btn" to="." method="_on_sav_def_btn_pressed"]
[connection signal="pressed" from="VB1/HBoxContainer3/create_btn" to="." method="_on_create_btn_pressed"]
